2010-07-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (delete-focus-window)
	(destroy-focus-window): Remove child in parent frame before
	stopping it.

2010-07-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (identify-key): Add a timeout in
	xlib:process-event.
	(mouse-click-to-focus-generic): Use find-child-under-mouse instead
	of the window passed by xlib:process-event.

	* src/xlib-util.lisp (move-window, resize-window)
	(wait-mouse-button-release): Add a timeout in xlib:process-event.

2010-04-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-other-window-manager): Add the ability
	to launch an other window manager and to return to clfswm.

2010-03-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-tile-space-layout): Set default
	to 1%.

2009-12-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-loop): Add a *loop-hook* parameter and a
	loop timeout.

	* src/clfswm-generic-mode.lisp (generic-mode): Add a loop-hook
	parameter and a loop timeout.

2009-12-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main): Add an alternate configuration filename
	parameter.

	* load.lisp: Add a debuging code example.

2009-11-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-configuration.lisp (create-configuration-menu): New
	menu to configure all clfswm variables while clfswm is running.

2009-11-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (save-configuration-variables): New
	function to save all configuration variables in clfswmrc.

2009-11-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (info-mode): Begining of mouse support in
	info mode.
	(set-default-info-keys): Add cursor key support in info mode.

2009-11-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/reboot-halt.lisp: Add a Suspend/Reboot/Halt menu in